# Yolo

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  premake5.lua  readme.md
Libraries/googletest-1.10.0/: premake5.lua
Libraries/spdlog-1.8.2/: CMakeLists.txt  premake5.lua
Scripts/: Linux-GenProjects.sh  Win-GenProjects.bat
Yolo!/: readme.md
Yolo!/Source/Domain/Graph/: Graph.cpp
Yolo/Source/Core/: Core.hpp  PreProcessor.hpp
Yolo/Source/Core/Logger/: Logger.cpp  Logger.hpp
Yolo/Source/Domain/Algorithm/: Algorithm.cpp  Algorithm.hpp  Criterion.cpp  Criterion.hpp  ExplicitEnumerationAlgorithm.cpp  ExplicitEnumerationAlgorithm.hpp  GradientDescentAlgorithm.cpp  GradientDescentAlgorithm.hpp  ImplicitEnumerationAlgorithm.cpp  ImplicitEnumerationAlgorithm.hpp  Neighborhood.cpp  Neighborhood.hpp  SimulatedAnnealingAlgorithm.cpp  SimulatedAnnealingAlgorithm.hpp  SwapAlgorithm.hpp  TabuAlgorithm.cpp  TabuAlgorithm.hpp  TabuListAlgorithm.cpp  TabuListAlgorithm.hpp
Yolo/Source/Domain/Criterion/: AlwaysValidCriterion.hpp  Criterion.hpp  SimilarSizeCriterion.cpp  SimilarSizeCriterion.hpp
Yolo/Source/Domain/Graph/: Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp
Yolo/Source/Domain/Neighborhood/: Neighborhood.hpp  PickNDropNeighborhood.cpp  PickNDropNeighborhood.hpp  SwapNeighborhood.cpp  SwapNeighborhood.hpp  SweepNeighborhood.cpp  SweepNeighborhood.hpp
Yolo/Source/Domain/Repository/: Repository.hpp
Yolo/Source/Domain/Solution/: Solution.cpp  Solution.hpp
Yolo/Source/Technical/FileReader/: FileReader.cpp  FileReader.hpp
Yolo/Source/Technical/Repositories/: GraphFileRepository.cpp  GraphFileRepository.hpp
Yolo/Source/UnitTests/Algorithm/: TestAlgorithm.cpp
Yolo/Source/UnitTests/Graph/: TestGraph.cpp
Yolo/Source/UnitTests/Solution/: TestSolution.cpp
Yolo/Source/UserInterface/: Sandbox.cpp
Yolo/Source/UserInterface/CLI/: CLI.cpp
Yolo/Source/UserInterface/Sandbox/: Sandbox.cpp
Yolo/Source/UserInterface/UnitTests/: UnitTests.cpp
Yolo/Source/UserInterface/UnitTests/Algorithm/: TestAlgorithm.cpp
Yolo/Source/UserInterface/UnitTests/Criterion/: TestCriterion.cpp
Yolo/Source/UserInterface/UnitTests/Graph/: TestEdge.cpp
Yolo/Source/UserInterface/UnitTests/Repository/: TestRepository.cpp
Yolo/Source/UserInterface/UnitTests/Solution/: TestSolution.cpp
